# ip_whois_tool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  example_ips.txt  ip_lookup.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_output.json
tests/: __init__.py
whois_tool/: __init__.py  cache.py  cli.py  engine.py  output.py  util.py
whois_tool/resolvers/: __init__.py  base.py  ipwhois_resolver.py  python_whois_resolver.py  system_resolver.py
