[metadata]
name = ip-whois-tool
description = A tool for looking up WHOIS information for IP addresses
long_description = file: README.md
long_description_content_type = text/markdown
author = IP WHOIS Tool Contributors
author_email = your.email@example.com
url = https://github.com/yourusername/ip_whois_tool
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords = whois, ip, networking, rdap, dns

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    ip-whois = whois_tool.cli:main
    ip-lookup = whois_tool.cli:main

[options.packages.find]
exclude =
    tests
    tests.*
    docs
    docs.*
    examples
    examples.*
    build
    dist

